--- a/index.html
+++ b/index.html
@@ -8,31 +8,39 @@
 </head>
 <body>
   <header>
-    <div class="header container">
-      <div class="title">
-        <p><span>Job</span> Passcard</p>
+      <div class="header container">
+
+        <div class="title">
+          <div class="title-img">
+            <img src="image/viadeo-svgrepo-com.png" alt="">
+          </div>
+          <span class="text-accent">Job</span><p>Passcard</p>
+        </div>
+
+        <div class="mid-top">
+          <nav class="midtop">
+            <a href="#">ABOUT US</a>
+            <a href="#">PASSCARD</a>
+            <a href="#">PEOPLE</a>
+          </nav>
+        </div>
+      
+        <div class="right-top navbar">
+          <nav class="right-top">
+            <a href="#"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M15.7955 15.8111L21 21M18 10.5C18 14.6421 14.6421 18 10.5 18C6.35786 18 3 14.6421 3 10.5C3 6.35786 6.35786 3 10.5 3C14.6421 3 18 6.35786 18 10.5Z" stroke="#a8a8a8" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg></a>
+            <a href="#">
+              <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#9c9c9c"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M5.60464 11.4417C5.79269 13.1343 5.88672 13.9805 6.45624 14.4903C7.02576 15 7.87723 15 9.58017 15H9.70588H13.4706H14.827C16.0002 15 16.5867 15 17.0627 14.7134C17.5387 14.4268 17.8132 13.9084 18.3621 12.8716L20.8303 8.20947C21.361 7.207 20.6343 6 19.5 6V6H9.70588H9.46906C7.38336 6 6.34051 6 5.74427 6.66616C5.14803 7.33231 5.2632 8.36878 5.49353 10.4417L5.60464 11.4417Z" stroke="#<svg viewBox=" 0="" 24="" 24"="" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M15.7955 15.8111L21 21M18 10.5C18 14.6421 14.6421 18 10.5 18C6.35786 18 3 14.6421 3 10.5C3 6.35786 6.35786 3 10.5 3C14.6421 3 18 6.35786 18 10.5Z" stroke="#7070708a8a8" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g>" stroke-width="2" stroke-linejoin="round"&gt;</path> <path d="M3 3H3.5V3C4.1642 3 4.72218 3.49942 4.79553 4.15955L5.55558 11" stroke="#<svg viewBox=" 0="" 24="" 24"="" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M15.7955 15.8111L21 21M18 10.5C18 14.6421 14.6421 18 10.5 18C6.35786 18 3 14.6421 3 10.5C3 6.35786 6.35786 3 10.5 3C14.6421 3 18 6.35786 18 10.5Z" stroke="#7070708a8a8" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g>" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"&gt;</path> <path d="M9 19.5C9 20.3284 8.32843 21 7.5 21C6.67157 21 6 20.3284 6 19.5C6 18.6716 6.67157 18 7.5 18C8.32843 18 9 18.6716 9 19.5Z" stroke="#<svg viewBox=" 0="" 24="" 24"="" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M15.7955 15.8111L21 21M18 10.5C18 14.6421 14.6421 18 10.5 18C6.35786 18 3 14.6421 3 10.5C3 6.35786 6.35786 3 10.5 3C14.6421 3 18 6.35786 18 10.5Z" stroke="#7070708a8a8" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g>" stroke-width="2"&gt;</path> <path d="M18 19.5C18 20.3284 17.3284 21 16.5 21C15.6716 21 15 20.3284 15 19.5C15 18.6716 15.6716 18 16.5 18C17.3284 18 18 18.6716 18 19.5Z" stroke="#<svg viewBox=" 0="" 24="" 24"="" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M15.7955 15.8111L21 21M18 10.5C18 14.6421 14.6421 18 10.5 18C6.35786 18 3 14.6421 3 10.5C3 6.35786 6.35786 3 10.5 3C14.6421 3 18 6.35786 18 10.5Z" stroke="#7070708a8a8" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g>" stroke-width="2"&gt;</path> </g></svg>
+            </a>
+            <a href="#">LOGIN</a>
+            <a href="#">SIGN UP</a>
+          </nav>
+        </div>
       </div>
-      <div class="mid-top">
-        <nav class="midtop">
-          <a href="#">ABOUT US</a>
-          <a href="#">PASSCARD</a>
-          <a href="#">PEOPLE</a>
-        </nav>
-      </div>
-      <div class="right-top navbar">
-        <nav class="right-top">
-          <a href="#"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M15.7955 15.8111L21 21M18 10.5C18 14.6421 14.6421 18 10.5 18C6.35786 18 3 14.6421 3 10.5C3 6.35786 6.35786 3 10.5 3C14.6421 3 18 6.35786 18 10.5Z" stroke="#a8a8a8" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg></a>
-          <a href="#">
-            <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#9c9c9c"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M5.60464 11.4417C5.79269 13.1343 5.88672 13.9805 6.45624 14.4903C7.02576 15 7.87723 15 9.58017 15H9.70588H13.4706H14.827C16.0002 15 16.5867 15 17.0627 14.7134C17.5387 14.4268 17.8132 13.9084 18.3621 12.8716L20.8303 8.20947C21.361 7.207 20.6343 6 19.5 6V6H9.70588H9.46906C7.38336 6 6.34051 6 5.74427 6.66616C5.14803 7.33231 5.2632 8.36878 5.49353 10.4417L5.60464 11.4417Z" stroke="#<svg viewBox=" 0="" 24="" 24"="" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M15.7955 15.8111L21 21M18 10.5C18 14.6421 14.6421 18 10.5 18C6.35786 18 3 14.6421 3 10.5C3 6.35786 6.35786 3 10.5 3C14.6421 3 18 6.35786 18 10.5Z" stroke="#7070708a8a8" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g>" stroke-width="2" stroke-linejoin="round"&gt;</path> <path d="M3 3H3.5V3C4.1642 3 4.72218 3.49942 4.79553 4.15955L5.55558 11" stroke="#<svg viewBox=" 0="" 24="" 24"="" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M15.7955 15.8111L21 21M18 10.5C18 14.6421 14.6421 18 10.5 18C6.35786 18 3 14.6421 3 10.5C3 6.35786 6.35786 3 10.5 3C14.6421 3 18 6.35786 18 10.5Z" stroke="#7070708a8a8" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g>" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"&gt;</path> <path d="M9 19.5C9 20.3284 8.32843 21 7.5 21C6.67157 21 6 20.3284 6 19.5C6 18.6716 6.67157 18 7.5 18C8.32843 18 9 18.6716 9 19.5Z" stroke="#<svg viewBox=" 0="" 24="" 24"="" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M15.7955 15.8111L21 21M18 10.5C18 14.6421 14.6421 18 10.5 18C6.35786 18 3 14.6421 3 10.5C3 6.35786 6.35786 3 10.5 3C14.6421 3 18 6.35786 18 10.5Z" stroke="#7070708a8a8" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g>" stroke-width="2"&gt;</path> <path d="M18 19.5C18 20.3284 17.3284 21 16.5 21C15.6716 21 15 20.3284 15 19.5C15 18.6716 15.6716 18 16.5 18C17.3284 18 18 18.6716 18 19.5Z" stroke="#<svg viewBox=" 0="" 24="" 24"="" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M15.7955 15.8111L21 21M18 10.5C18 14.6421 14.6421 18 10.5 18C6.35786 18 3 14.6421 3 10.5C3 6.35786 6.35786 3 10.5 3C14.6421 3 18 6.35786 18 10.5Z" stroke="#7070708a8a8" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g>" stroke-width="2"&gt;</path> </g></svg>
-          </a>
-          <a href="#">LOGIN</a>
-          <a href="#">SIGN UP</a>
-        </nav>
-      </div>
-    </div>
   </header>
 
   <main> 
+    <h2>My cart</h2>
+
     <div class="main-part container">
       <div class="left-side">
         <div class="google-docs">
@@ -46,9 +54,15 @@
             <div class="class-select-container">
               <h2>Google Docs</h2>
               <div class="select-level">
+                <div>
+                  <div class="level-indicatior-circle">pp</div>
+                  <div class="level-indicatior-circle">pp</div>
+                  <div class="level-indicatior-circle">pp</div>
+                  <div class="level-indicatior-circle">pp</div>
+                </div>
                 <select name="" id="">
-                  <option value="" selected>Please select the level
-                  </option>
+                  <!-- <option value="" selected>Please select the level
+                  </option> -->
                   <option value="LV1-3" selected>LV 1-3
                   </option>
                   <option value="LV2-3" selected>LV 2-3
@@ -74,6 +88,12 @@
               <div class="class-select-container">
                 <h2>Google Slides</h2>
                 <div class="select-level">
+                  <div>
+                    <div class="level-indicatior-circle">pp</div>
+                    <div class="level-indicatior-circle">pp</div>
+                    <div class="level-indicatior-circle">pp</div>
+                    <div class="level-indicatior-circle">pp</div>
+                  </div>
                   <select name="" id="">
                     <option value="" selected>Please select the level
                     </option>
@@ -86,14 +106,15 @@
                     <option value="LV4" selected>LV 4 / 4
                     </option>
                   </select>
-                  <div class="cost">
-                    <p>THB 150</p>
-                  </div>
+                </div>
+                <div class="cost">
+                  <p>THB 150</p>
                 </div>
               </div>
             </div>
           </div>
       </div>
+      
       <div class="right-side">
           <h3>Order Info</h3>
            <div class="promo-cost">
